--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -59,7 +59,7 @@ services:
   php-progress:
     build:
       context: ./php-progress
-      dockerfile: ./dev.Dockerfile
+      dockerfile: ./Dockerfile
     restart: unless-stopped
     volumes:
       - ./php-progress:/var/www/html
